--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                         <div class="contact-icon">📍</div>
                         <div class="contact-details">
                             <h4>公司地址</h4>
-                            <p>北京市朝阳区环保大厦15层<br>邮编：100020</p>
+                            <p>云南省昆明市西山区明波立交桥西侧宏盛达滇池柏悦1幢1001、1008<br>邮编：650100</p>
                         </div>
                     </div>
 
@@ -53,9 +53,7 @@
                         <div class="contact-icon">📞</div>
                         <div class="contact-details">
                             <h4>联系电话</h4>
-                            <p>服务热线：400-888-9999<br>
-                            业务咨询：010-8888-1234<br>
-                            技术支持：010-8888-5678</p>
+                            <p>联系电话：0871-67174013</p>
                         </div>
                     </div>
 
@@ -63,9 +61,8 @@
                         <div class="contact-icon">✉️</div>
                         <div class="contact-details">
                             <h4>电子邮箱</h4>
-                            <p>业务咨询：info@huanbaogj.com<br>
-                            技术支持：support@huanbaogj.com<br>
-                            人力资源：hr@huanbaogj.com</p>
+                            <p>业务咨询、技术支持：78520450@qq.com<br>
+                            人力资源：2475634516@qq.com</p>
                         </div>
                     </div>
 
@@ -73,7 +70,7 @@
                         <div class="contact-icon">🌐</div>
                         <div class="contact-details">
                             <h4>官方网站</h4>
-                            <p>www.huanbaogj.com</p>
+                            <p>www.yueen.cc</p>
                         </div>
                     </div>
 
@@ -81,21 +78,22 @@
                     <div class="business-hours">
                         <h3 class="hours-title">工作时间</h3>
                         <ul class="hours-list">
-                            <li><span class="day">周一至周五</span><span class="time">9:00 - 18:00</span></li>
-                            <li><span class="day">周六</span><span class="time">9:00 - 17:00</span></li>
-                            <li><span class="day">周日</span><span class="time">休息</span></li>
+                            <li><span class="day">周一至周五</span><span class="time">8:30 - 17:50</span></li>
+                            <li><span class="day">周六周日</span><span class="time">休息</span></li>
                             <li><span class="day">法定节假日</span><span class="time">休息</span></li>
                         </ul>
-                        <p style="margin-top: 15px; color: #666; font-size: 0.9rem;">
-                            * 紧急情况请拨打24小时服务热线：400-888-9999
-                        </p>
                     </div>
 
                     <!-- 地图 -->
                     <div class="map-container">
-                        <div class="map-placeholder">
-                            <p>📍 公司位置地图</p>
-                            <p style="font-size: 0.9rem; margin-top: 10px;">北京市朝阳区环保大厦15层</p>
+                        <div class="map-placeholder" style="height: 300px; background: #f5f5f5; border: 1px solid #ddd; border-radius: 8px; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                            <div style="text-align: center; padding: 20px;">
+                                <p style="font-size: 1.1rem; margin-bottom: 10px;">📍 公司位置地图</p>
+                                <p style="font-size: 0.9rem; color: #666; line-height: 1.5;">云南省昆明市西山区明波立交桥西侧<br>宏盛达滇池柏悦1幢1001、1008</p>
+                                <p style="font-size: 0.8rem; color: #999; margin-top: 15px;">
+                                    您可以使用百度地图、高德地图搜索"宏盛达滇池柏悦"查看详细位置
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -170,10 +168,10 @@
                 <div class="footer-column">
                     <h3 class="footer-title">联系信息</h3>
                     <ul class="footer-contact">
-                        <li><i>📍</i> 北京市朝阳区环保大厦15层</li>
-                        <li><i>📞</i> 400-888-9999</li>
-                        <li><i>✉️</i> info@huanbaogj.com</li>
-                        <li><i>🕒</i> 周一至周五 9:00-18:00</li>
+                        <li><i>📍</i> 云南省昆明市西山区明波立交桥西侧宏盛达滇池柏悦1幢1001、1008</li>
+                        <li><i>📞</i> 0871-67174013</li>
+                        <li><i>✉️</i> 78520450@qq.com</li>
+                        <li><i>🕒</i> 周一至周五 8:30-17:50</li>
                     </ul>
                 </div>
                 <div class="footer-column">
