--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>联系我们 - 环保管家</title>
-    <meta name="description" content="联系环保管家，获取专业的环保服务咨询和报价">
+    <title>联系我们 - 云南悦恩环保技术咨询有限公司</title>
+    <meta name="description" content="联系云南悦恩环保技术咨询有限公司，获取专业的环保服务咨询和报价">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contact.css">
 </head>
@@ -14,19 +14,28 @@
         <div class="container">
             <div class="header-container">
                 <div class="logo">
-                    <a href="index.html">环保管家</a>
+                    <a href="index.html">
+                        <img src="logo.png" alt="云南悦恩环保技术咨询有限公司" class="logo-img">
+                        <span class="logo-text">云南悦恩环保技术咨询有限公司</span>
+                        <div class="logo-subtitle">Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd</div>
+                    </a>
                 </div>
+            </div>
+        </div>
+        <div class="nav-container">
+            <div class="container">
                 <nav class="nav-menu">
-                    <ul>
+                    <ul class="nav-list">
                         <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">关于我们</a></li>
                         <li class="nav-item"><a href="services.html" class="nav-link">服务项目</a></li>
                         <li class="nav-item"><a href="cases.html" class="nav-link">成功案例</a></li>
                         <li class="nav-item"><a href="news.html" class="nav-link">新闻中心</a></li>
+                        <li class="nav-item"><a href="jobs.html" class="nav-link">人才招聘</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link active">联系我们</a></li>
                     </ul>
                 </nav>
-                <a href="contact.html" class="btn get-quote">获取报价</a>
+                <a href="contact.html" class="btn get-quote" onclick="getQuote()">获取报价</a>
                 <div class="mobile-toggle">☰</div>
             </div>
         </div>
@@ -162,6 +171,7 @@
                         <li><a href="services.html">服务项目</a></li>
                         <li><a href="cases.html">成功案例</a></li>
                         <li><a href="news.html">新闻中心</a></li>
+                        <li><a href="jobs.html">人才招聘</a></li>
                         <li><a href="contact.html">联系我们</a></li>
                     </ul>
                 </div>
@@ -183,7 +193,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 环保管家. All Rights Reserved.</p>
+                <p>&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
             </div>
         </div>
     </footer>
