--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>环保管家 - 您值得信赖的全周期环保管家</title>
-    <meta name="description" content="环保管家提供专业的环保咨询、污染治理、环境检测、排污许可申报等一站式环保服务">
+    <title>云南悦恩环保技术咨询有限公司 - 您值得信赖的全周期环保管家</title>
+    <meta name="description" content="云南悦恩环保技术咨询有限公司提供专业的环保咨询、污染治理、环境检测、排污许可申报等一站式环保服务">
     <meta name="keywords" content="环保服务,环境治理,污染治理,环保咨询,排污许可,环境检测">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
@@ -15,15 +15,24 @@
         <div class="container">
             <div class="header-container">
                 <div class="logo">
-                    <a href="index.html">环保管家</a>
+                    <a href="index.html">
+                        <img src="logo.png" alt="云南悦恩环保技术咨询有限公司" class="logo-img">
+                        <span class="logo-text">云南悦恩环保技术咨询有限公司</span>
+                        <div class="logo-subtitle">Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd</div>
+                    </a>
                 </div>
+            </div>
+        </div>
+        <div class="nav-container">
+            <div class="container">
                 <nav class="nav-menu">
-                    <ul>
+                    <ul class="nav-list">
                         <li class="nav-item"><a href="index.html" class="nav-link active">首页</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">关于我们</a></li>
                         <li class="nav-item"><a href="services.html" class="nav-link">服务项目</a></li>
                         <li class="nav-item"><a href="cases.html" class="nav-link">成功案例</a></li>
                         <li class="nav-item"><a href="news.html" class="nav-link">新闻中心</a></li>
+                        <li class="nav-item"><a href="jobs.html" class="nav-link">人才招聘</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
                     </ul>
                 </nav>
@@ -37,8 +46,8 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">您值得信赖的全周期环保管家</h1>
-                <p class="hero-subtitle">专业环保服务 · 绿色发展伙伴 · 可持续未来</p>
+                <h1 class="hero-title">云南悦恩环保 - 您值得信赖的环保伙伴</h1>
+                <p class="hero-subtitle">责任共担 · 技术驱动 · 可持续未来</p>
                 <a href="services.html" class="btn btn-secondary">了解我们的服务</a>
             </div>
         </div>
@@ -50,24 +59,22 @@
             <h2 class="section-title">核心服务</h2>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-icon">🌱</div>
-                    <h3 class="service-title">环境影响评价</h3>
-                    <p class="service-desc">专业的环评报告编制，确保项目合规建设，降低环境风险</p>
+                    <div class="service-icon">🧠</div>
+                    <h3 class="service-title">环策（环保工作策略模式）</h3>
+                    <p class="service-desc">高阶专家智囊，为企业关键决策保驾护航</p>
+                    <a href="services.html#huance" class="btn service-btn">了解详情</a>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">📋</div>
-                    <h3 class="service-title">排污许可申报</h3>
-                    <p class="service-desc">一站式排污许可证申请服务，简化审批流程，提高通过率</p>
+                    <h3 class="service-title">环协（环保工作协助模式）</h3>
+                    <p class="service-desc">SOP驱动的日常协理，标准化环保管理服务</p>
+                    <a href="services.html#huanxie" class="btn service-btn">了解详情</a>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon">🏭</div>
-                    <h3 class="service-title">污染治理工程</h3>
-                    <p class="service-desc">定制化污染治理解决方案，从设计到施工的全流程服务</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">💻</div>
-                    <h3 class="service-title">智慧环保平台</h3>
-                    <p class="service-desc">数字化环保管理系统，实时监控，智能预警，提升管理效率</p>
+                    <div class="service-icon">🛡️</div>
+                    <h3 class="service-title">环责（环保工作全责模式）</h3>
+                    <p class="service-desc">全权责任托管，为企业环保合规提供全面保障</p>
+                    <a href="services.html#huanze" class="btn service-btn">了解详情</a>
                 </div>
             </div>
         </div>
@@ -78,15 +85,30 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-image">
-                    <img src="images/about-preview.jpg" alt="环保管家团队" style="width: 100%; height: 300px; object-fit: cover; background-color: #ddd;">
+                    <img src="images/about-preview.jpg" alt="云南悦恩环保技术咨询有限公司团队" style="width: 100%; height: 300px; object-fit: cover; background-color: #ddd;">
                 </div>
                 <div class="about-text">
-                    <h2 class="about-title">专业团队，值得信赖</h2>
+                    <h2 class="about-title">责任共担，技术驱动</h2>
                     <p class="about-desc">
-                        环保管家成立于2015年，是一家专注于环保服务的专业机构。我们拥有一支由环保工程师、环评师、注册环保工程师组成的专业团队，累计服务企业超过1000家，成功完成各类环保项目2000余个。
+                        云南悦恩环保技术咨询有限公司（简称"悦恩环保"），成立于2019年，是一家以"责任共担、技术驱动"为核心理念的创新型环保服务企业。作为全国首家通过中国质量认证中心（CQC）"环保管家"服务认证的机构，我们致力于为企业提供从顶层战略咨询到日常运营执行的一站式、可信赖的解决方案，矢志成为"政府监管服务商、企业服务总包商"，最终实现"让家园的生态环境能长期美好"的愿景。
                     </p>
                     <p class="about-desc">
-                        我们秉承"专业、高效、诚信、创新"的服务理念，为客户提供从环保咨询到工程实施的全链条服务，助力企业实现绿色可持续发展。
+                        我们的独特优势：
+                    </p>
+                    <p class="about-desc">
+                        <strong>开创性的服务体系：</strong> 我们独创了由"环策"（高阶专家智囊）、"环协"（SOP驱动的日常协理）与"环责"（全权责任托管展望）构成的分层服务体系。该体系颠覆了传统咨询模式，通过与客户签订责任共担协议，将自身利益与企业的环保合规成果深度绑定，用结果为服务正名。
+                    </p>
+                    <p class="about-desc">
+                        <strong>先进的技术平台：</strong> 我们自主研发"悦恩智慧环保"平台，将大数据与人工智能（AI）深度融入服务。通过服务小程序、云端数据中心、AI专家智能体、"人机共写"平台等技术工具，我们将传统依赖个人经验的模式，升级为标准化、数字化、智能化的现代服务体系，极大地提升了服务效率与精准度。
+                    </p>
+                    <p class="about-desc">
+                        <strong>深刻的行业洞察：</strong> 我们拥有一支由创始人姚晓先生领导，技术、行政核心合伙人协同驱动的专业团队。我们深刻理解企业在环保管理中的痛点，并以"伙伴式"的服务理念在环保服务领域形成了强大的口碑和优势。
+                    </p>
+                    <p class="about-desc">
+                        <strong>明确的社会价值：</strong> 悦恩环保致力于成为政府高效监管的"前沿哨兵"和"效率放大器"，通过我们的专业服务，延伸监管触角、化解企业风险，最终构建一个"政府省心、企业安心、社会放心"的"三方共赢"环境治理新生态。
+                    </p>
+                    <p class="about-desc">
+                        悦恩环保，不仅是企业的环境健康医师，更是与政府、社会共赴一场绿水青山之约的坚定同行者。
                     </p>
                     <a href="about.html" class="btn">了解更多</a>
                 </div>
@@ -103,7 +125,7 @@
                     <div class="case-image" style="background-image: url('images/case1.jpg'); background-color: #ddd;"></div>
                     <div class="case-content">
                         <h3 class="case-title">某化工企业废气治理项目</h3>
-                        <p class="case-desc">为大型化工企业设计并实施了完整的废气治理解决方案，实现了污染物达标排放，获得了环保部门的高度认可。</p>
+                        <p class="case-desc">云南悦恩环保为大型化工企业设计并实施了完整的废气治理解决方案，实现了污染物达标排放，获得了环保部门的高度认可。</p>
                         <a href="cases.html" class="btn">查看详情</a>
                     </div>
                 </div>
@@ -111,7 +133,7 @@
                     <div class="case-image" style="background-image: url('images/case2.jpg'); background-color: #ddd;"></div>
                     <div class="case-content">
                         <h3 class="case-title">医药园区环评报告编制</h3>
-                        <p class="case-desc">承担某医药产业园区的环境影响评价工作，项目顺利通过专家评审，为园区后续发展奠定了基础。</p>
+                        <p class="case-desc">云南悦恩环保承担某医药产业园区的环境影响评价工作，项目顺利通过专家评审，为园区后续发展奠定了基础。</p>
                         <a href="cases.html" class="btn">查看详情</a>
                     </div>
                 </div>
@@ -119,7 +141,7 @@
                     <div class="case-image" style="background-image: url('images/case3.jpg'); background-color: #ddd;"></div>
                     <div class="case-content">
                         <h3 class="case-title">电镀企业污水处理系统</h3>
-                        <p class="case-desc">为电镀企业量身定制污水处理系统，采用先进工艺技术，实现了废水的高效处理和回用。</p>
+                        <p class="case-desc">云南悦恩环保为电镀企业量身定制污水处理系统，采用先进工艺技术，实现了废水的高效处理和回用。</p>
                         <a href="cases.html" class="btn">查看详情</a>
                     </div>
                 </div>
@@ -148,8 +170,8 @@
                         <div class="news-month">12月</div>
                     </div>
                     <div class="news-content">
-                        <h3 class="news-title">环保管家荣获"2023年度优秀环保服务机构"称号</h3>
-                        <p class="news-excerpt">在刚刚结束的环保行业年度评选中，环保管家凭借优质的服务和良好的口碑，荣获"2023年度优秀环保服务机构"称号...</p>
+                        <h3 class="news-title">云南悦恩环保荣获"2023年度优秀环保服务机构"称号</h3>
+                        <p class="news-excerpt">在刚刚结束的环保行业年度评选中，云南悦恩环保凭借优质的服务和良好的口碑，荣获"2023年度优秀环保服务机构"称号...</p>
                     </div>
                 </div>
                 <div class="news-item">
@@ -159,7 +181,7 @@
                     </div>
                     <div class="news-content">
                         <h3 class="news-title">智慧环保平台2.0版本正式上线</h3>
-                        <p class="news-excerpt">经过半年的研发和测试，我们的智慧环保平台2.0版本正式上线，新增了AI智能预警、数据可视化等功能...</p>
+                        <p class="news-excerpt">经过半年的研发和测试，云南悦恩环保的智慧环保平台2.0版本正式上线，新增了AI智能预警、数据可视化等功能...</p>
                     </div>
                 </div>
             </div>
@@ -181,16 +203,17 @@
                         <li><a href="services.html">服务项目</a></li>
                         <li><a href="cases.html">成功案例</a></li>
                         <li><a href="news.html">新闻中心</a></li>
+                        <li><a href="jobs.html">人才招聘</a></li>
                         <li><a href="contact.html">联系我们</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3 class="footer-title">联系信息</h3>
                     <ul class="footer-contact">
-                        <li><i>📍</i> 北京市朝阳区环保大厦15层</li>
-                        <li><i>📞</i> 400-888-9999</li>
-                        <li><i>✉️</i> info@huanbaogj.com</li>
-                        <li><i>🕒</i> 周一至周五 9:00-18:00</li>
+                        <li><i>📍</i> 云南省昆明市西山区明波立交桥西侧宏盛达滇池柏悦1幢1001、1008</li>
+                        <li><i>📞</i> 0871-67174013</li>
+                        <li><i>✉️</i> 78520450@qq.com</li>
+                        <li><i>🕒</i> 周一至周五 8:30-17:50</li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -202,7 +225,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 环保管家. All Rights Reserved.</p>
+                <p>&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
             </div>
         </div>
     </footer>
