--- a/news.html
+++ b/news.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新闻中心 - 环保管家</title>
-    <meta name="description" content="环保管家新闻中心，了解最新的环保政策、行业动态和公司新闻">
+    <title>新闻中心 - 云南悦恩环保技术咨询有限公司</title>
+    <meta name="description" content="云南悦恩环保技术咨询有限公司新闻中心，了解最新的环保政策、行业动态和公司新闻">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/news.css">
 </head>
@@ -14,19 +14,28 @@
         <div class="container">
             <div class="header-container">
                 <div class="logo">
-                    <a href="index.html">环保管家</a>
+                    <a href="index.html">
+                        <img src="logo.png" alt="云南悦恩环保技术咨询有限公司" class="logo-img">
+                        <span class="logo-text">云南悦恩环保技术咨询有限公司</span>
+                        <div class="logo-subtitle">Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd</div>
+                    </a>
                 </div>
+            </div>
+        </div>
+        <div class="nav-container">
+            <div class="container">
                 <nav class="nav-menu">
-                    <ul>
+                    <ul class="nav-list">
                         <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">关于我们</a></li>
                         <li class="nav-item"><a href="services.html" class="nav-link">服务项目</a></li>
                         <li class="nav-item"><a href="cases.html" class="nav-link">成功案例</a></li>
                         <li class="nav-item"><a href="news.html" class="nav-link active">新闻中心</a></li>
+                        <li class="nav-item"><a href="jobs.html" class="nav-link">人才招聘</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
                     </ul>
                 </nav>
-                <a href="contact.html" class="btn get-quote">获取报价</a>
+                <a href="contact.html" class="btn get-quote" onclick="getQuote()">获取报价</a>
                 <div class="mobile-toggle">☰</div>
             </div>
         </div>
@@ -60,9 +69,9 @@
                     </div>
                     <div class="news-content">
                         <div class="news-category">公司新闻</div>
-                        <h2 class="news-title">环保管家荣获"2023年度优秀环保服务机构"称号</h2>
+                        <h2 class="news-title">云南悦恩环保荣获"2023年度优秀环保服务机构"称号</h2>
                         <p class="news-excerpt">
-                            在刚刚结束的环保行业年度评选中，环保管家凭借优质的服务和良好的口碑，荣获"2023年度优秀环保服务机构"称号。这是对我们专业能力和服务质量的充分认可...
+                            在刚刚结束的环保行业年度评选中，云南悦恩环保凭借优质的服务和良好的口碑，荣获"2023年度优秀环保服务机构"称号。这是对我们专业能力和服务质量的充分认可...
                         </p>
                         <div class="news-meta">
                             <span>发布时间：2024-12-10</span>
@@ -128,9 +137,9 @@
                     </div>
                     <div class="news-content">
                         <div class="news-category">公司新闻</div>
-                        <h2 class="news-title">环保管家与清华大学环境学院签署战略合作协议</h2>
+                        <h2 class="news-title">云南悦恩环保与清华大学环境学院签署战略合作协议</h2>
                         <p class="news-excerpt">
-                            近日，环保管家与清华大学环境学院正式签署战略合作协议，双方将在环保技术研发、人才培养、项目合作等方面开展深度合作，共同推动环保产业的技术创新和发展...
+                            近日，云南悦恩环保与清华大学环境学院正式签署战略合作协议，双方将在环保技术研发、人才培养、项目合作等方面开展深度合作，共同推动环保产业的技术创新和发展...
                         </p>
                         <div class="news-meta">
                             <span>发布时间：2024-11-15</span>
@@ -163,16 +172,17 @@
                         <li><a href="services.html">服务项目</a></li>
                         <li><a href="cases.html">成功案例</a></li>
                         <li><a href="news.html">新闻中心</a></li>
+                        <li><a href="jobs.html">人才招聘</a></li>
                         <li><a href="contact.html">联系我们</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h3 class="footer-title">联系信息</h3>
                     <ul class="footer-contact">
-                        <li><i>📍</i> 北京市朝阳区环保大厦15层</li>
-                        <li><i>📞</i> 400-888-9999</li>
-                        <li><i>✉️</i> info@huanbaogj.com</li>
-                        <li><i>🕒</i> 周一至周五 9:00-18:00</li>
+                        <li><i>📍</i> 云南省昆明市西山区明波立交桥西侧宏盛达滇池柏悦1幢1001、1008</li>
+                        <li><i>📞</i> 0871-67174013</li>
+                        <li><i>✉️</i> 78520450@qq.com</li>
+                        <li><i>🕒</i> 周一至周五 8:30-17:50</li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -184,7 +194,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2025 环保管家. All Rights Reserved.</p>
+                <p>&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
             </div>
         </div>
     </footer>
