完善导航栏下拉菜单功能
- 为所有主要导航项添加完整的下拉菜单
- 关于我们：企业简介、专家团队、企业资质荣誉
- 服务项目：环策、环协、环责
- 技术合作：17个技术服务项目
- 新闻中心：新闻发布、公示公告、公司动态
- 加入我们：人才招聘、公司环境、员工活动
- 重构index.html文件结构，修复重复内容问题
- 优化页面布局和用户体验
- 所有下拉菜单项支持页面内锚点跳转

--- a/index.html
+++ b/index.html
@@ -30,8 +30,22 @@
                 <nav class="nav-menu">
                     <ul class="nav-list">
                         <li class="nav-item"><a href="index.html" class="nav-link active">首页</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link">关于我们</a></li>
-                        <li class="nav-item"><a href="services.html" class="nav-link">服务项目</a></li>
+                        <li class="nav-item dropdown">
+                            <a href="about.html" class="nav-link">关于我们 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="about.html#company-intro">企业简介</a></li>
+                                <li><a href="about.html#expert-team">专家团队</a></li>
+                                <li><a href="about.html#qualifications">企业资质荣誉</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="services.html" class="nav-link">服务项目 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="services.html#huance">环策</a></li>
+                                <li><a href="services.html#huanxie">环协</a></li>
+                                <li><a href="services.html#huanze">环责</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item dropdown">
                             <a href="cases.html" class="nav-link">技术合作 <span class="dropdown-arrow">▼</span></a>
                             <ul class="dropdown-menu">
@@ -54,8 +68,22 @@
                                 <li><a href="services.html#government-subsidy">政府补贴申报</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="news.html" class="nav-link">新闻中心</a></li>
-                        <li class="nav-item"><a href="jobs.html" class="nav-link">加入我们</a></li>
+                        <li class="nav-item dropdown">
+                            <a href="news.html" class="nav-link">新闻中心 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="news.html#news-release">新闻发布</a></li>
+                                <li><a href="news.html#public-notice">公示公告</a></li>
+                                <li><a href="news.html#company-news">公司动态</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="jobs.html" class="nav-link">加入我们 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="jobs.html#recruitment">人才招聘</a></li>
+                                <li><a href="jobs.html#company-environment">公司环境</a></li>
+                                <li><a href="jobs.html#employee-activities">员工活动</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
                     </ul>
                 </nav>
@@ -122,11 +150,11 @@
                     <h3 class="footer-title">快速链接</h3>
                     <ul class="footer-links">
                         <li><a href="index.html">首页</a></li>
-                        <li><a href="about.html">关于我们</a></li>
-                        <li><a href="services.html">服务项目</a></li>
-                        <li><a href="cases.html">技术合作</a></li>
-                        <li><a href="news.html">新闻中心</a></li>
-                        <li><a href="jobs.html">加入我们</a></li>
+                        <li><a href="about.html#company-intro">企业简介</a></li>
+                        <li><a href="about.html#expert-team">专家团队</a></li>
+                        <li><a href="services.html#huance">环策服务</a></li>
+                        <li><a href="services.html#huanxie">环协服务</a></li>
+                        <li><a href="services.html#huanze">环责服务</a></li>
                         <li><a href="contact.html">联系我们</a></li>
                     </ul>
                 </div>
