统一所有页面导航栏结构和页脚样式，删除快速链接、联系信息、关注我们板块，只保留白色版权信息

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="环保服务,环境治理,污染治理,环保咨询,排污许可,环境检测">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
     <!-- 页头 -->
@@ -79,9 +80,10 @@
                         <li class="nav-item dropdown">
                             <a href="jobs.html" class="nav-link">加入我们 <span class="dropdown-arrow">▼</span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="jobs.html#recruitment">人才招聘</a></li>
-                                <li><a href="jobs.html#company-environment">公司环境</a></li>
-                                <li><a href="jobs.html#employee-activities">员工活动</a></li>
+                                <li><a href="jobs.html#job-positions">英雄帖</a></li>
+                                <li><a href="jobs.html#workspace">工作空间</a></li>
+                                <li><a href="jobs.html#failure-museum">失败博物馆</a></li>
+                                <li><a href="jobs.html#career-path">开启之路</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -145,38 +147,8 @@
     <!-- 页脚 -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-container">
-                <div class="footer-column">
-                    <h3 class="footer-title">快速链接</h3>
-                    <ul class="footer-links">
-                        <li><a href="index.html">首页</a></li>
-                        <li><a href="about.html#company-intro">企业简介</a></li>
-                        <li><a href="about.html#expert-team">专家团队</a></li>
-                        <li><a href="services.html#huance">环策服务</a></li>
-                        <li><a href="services.html#huanxie">环协服务</a></li>
-                        <li><a href="services.html#huanze">环责服务</a></li>
-                        <li><a href="contact.html">联系我们</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3 class="footer-title">联系信息</h3>
-                    <ul class="footer-contact">
-                        <li><i>📍</i> 云南省昆明市西山区明波立交桥西侧宏盛达滇池柏悦1幢1001、1008</li>
-                        <li><i>📞</i> 0871-67174013</li>
-                        <li><i>✉️</i> 78520450@qq.com</li>
-                        <li><i>🕒</i> 周一至周五 8:30-17:50</li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3 class="footer-title">关注我们</h3>
-                    <div class="qrcode">
-                        <div style="width: 100px; height: 100px; background-color: #ddd; display: flex; align-items: center; justify-content: center; color: #666;">微信二维码</div>
-                    </div>
-                    <p style="text-align: center; margin-top: 10px;">扫码关注公众号</p>
-                </div>
-            </div>
             <div class="copyright">
-                <p>&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
+                <p style="color: white;">&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
             </div>
         </div>
     </footer>
