--- a/about.html
+++ b/about.html
@@ -28,11 +28,61 @@
                 <nav class="nav-menu">
                     <ul class="nav-list">
                         <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link active">关于我们</a></li>
-                        <li class="nav-item"><a href="services.html" class="nav-link">服务项目</a></li>
-                        <li class="nav-item"><a href="cases.html" class="nav-link">成功案例</a></li>
-                        <li class="nav-item"><a href="news.html" class="nav-link">新闻中心</a></li>
-                        <li class="nav-item"><a href="jobs.html" class="nav-link">人才招聘</a></li>
+                        <li class="nav-item dropdown">
+                            <a href="about.html" class="nav-link">关于我们 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="about.html#company-intro">企业简介</a></li>
+                                <li><a href="about.html#team">专家团队</a></li>
+                                <li><a href="about.html#qualifications">企业资质荣誉</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="services.html" class="nav-link">服务项目 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="services.html#huance">环策</a></li>
+                                <li><a href="services.html#huanxie">环协</a></li>
+                                <li><a href="services.html#huanze">环责</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="cases.html" class="nav-link">技术合作 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="services.html#environmental-assessment">建设项目环境影响评价</a></li>
+                                <li><a href="services.html#completion-acceptance">建设项目竣工保护验收</a></li>
+                                <li><a href="services.html#pollution-permit">全国排污许可证</a></li>
+                                <li><a href="services.html#drainage-permit">排水许可证</a></li>
+                                <li><a href="services.html#radiation-permit">辐射安全许可证</a></li>
+                                <li><a href="services.html#medical-radiation">放射诊疗许可证</a></li>
+                                <li><a href="services.html#emergency-plan">突发环境事件应急预案</a></li>
+                                <li><a href="services.html#treatment-facilities">污染源治理设施建设</a></li>
+                                <li><a href="services.html#wastewater-operation">污水处理设施运营维护</a></li>
+                                <li><a href="services.html#wastewater-testing">废水检测</a></li>
+                                <li><a href="services.html#waste-gas-testing">废气检测</a></li>
+                                <li><a href="services.html#noise-testing">噪声检测</a></li>
+                                <li><a href="services.html#radiation-testing">辐射检测</a></li>
+                                <li><a href="services.html#hazardous-waste">危险废物处置</a></li>
+                                <li><a href="services.html#medical-waste">医疗废物处置</a></li>
+                                <li><a href="services.html#general-waste">一般固废处置</a></li>
+                                <li><a href="services.html#government-subsidy">政府补贴申报</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="news.html" class="nav-link">新闻中心 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="news.html#news-release">新闻发布</a></li>
+                                <li><a href="news.html#public-notice">公示公告</a></li>
+                                <li><a href="news.html#company-news">公司动态</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="jobs.html" class="nav-link">加入我们 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="jobs.html#job-positions">英雄帖</a></li>
+                                <li><a href="jobs.html#workspace">工作空间</a></li>
+                                <li><a href="jobs.html#failure-museum">失败博物馆</a></li>
+                                <li><a href="jobs.html#career-path">开启之路</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
                     </ul>
                 </nav>
@@ -50,7 +100,7 @@
     </section>
 
     <!-- 公司介绍 -->
-    <section class="section company-intro">
+    <section id="company-intro" class="section company-intro">
         <div class="container">
             <div class="intro-content">
                 <h2 class="intro-title">云南悦恩环保 - 责任共担，技术驱动</h2>
@@ -77,7 +127,7 @@
     </section>
 
     <!-- 专家团队 -->
-    <section class="section team">
+    <section id="team" class="section team">
         <div class="container">
             <h2 class="section-title">专家团队</h2>
             <div class="team-grid">
@@ -134,7 +184,7 @@
     </section>
 
     <!-- 企业资质 -->
-    <section class="section qualifications">
+    <section id="qualifications" class="section qualifications">
         <div class="container">
             <h2 class="section-title">企业资质荣誉</h2>
             
@@ -293,38 +343,8 @@
     <!-- 页脚 -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-container">
-                <div class="footer-column">
-                    <h3 class="footer-title">快速链接</h3>
-                    <ul class="footer-links">
-                        <li><a href="index.html">首页</a></li>
-                        <li><a href="about.html">关于我们</a></li>
-                        <li><a href="services.html">服务项目</a></li>
-                        <li><a href="cases.html">成功案例</a></li>
-                        <li><a href="news.html">新闻中心</a></li>
-                        <li><a href="jobs.html">人才招聘</a></li>
-                        <li><a href="contact.html">联系我们</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3 class="footer-title">联系信息</h3>
-                    <ul class="footer-contact">
-                        <li><i>📍</i> 云南省昆明市西山区明波立交桥西侧宏盛达滇池柏悦1幢1001、1008</li>
-                        <li><i>📞</i> 0871-67174013</li>
-                        <li><i>✉️</i> 78520450@qq.com</li>
-                        <li><i>🕒</i> 周一至周五 8:30-17:50</li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3 class="footer-title">关注我们</h3>
-                    <div class="qrcode">
-                        <div style="width: 100px; height: 100px; background-color: #ddd; display: flex; align-items: center; justify-content: center; color: #666;">微信二维码</div>
-                    </div>
-                    <p style="text-align: center; margin-top: 10px;">扫码关注公众号</p>
-                </div>
-            </div>
             <div class="copyright">
-                <p>&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
+                <p style="color: white;">&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
             </div>
         </div>
     </footer>
