--- a/cases.html
+++ b/cases.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ban'kuaibankuaiE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>成功案例 - 云南悦恩环保技术咨询有限公司</title>
-    <meta name="description" content="云南悦恩环保技术咨询有限公司成功案例展示，涵盖化工、医药、电镀等行业的环保治理项目">
+    <title>技术合作 - 云南悦恩环保技术咨询有限公司</title>
+    <meta name="description" content="云南悦恩环保技术咨询有限公司技术合作项目，涵盖环评、检测、治理等全方位环保服务">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/cases.css">
 </head>
@@ -27,11 +27,61 @@
                 <nav class="nav-menu">
                     <ul class="nav-list">
                         <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link">关于我们</a></li>
-                        <li class="nav-item"><a href="services.html" class="nav-link">服务项目</a></li>
-                        <li class="nav-item"><a href="cases.html" class="nav-link active">成功案例</a></li>
-                        <li class="nav-item"><a href="news.html" class="nav-link">新闻中心</a></li>
-                        <li class="nav-item"><a href="jobs.html" class="nav-link">人才招聘</a></li>
+                        <li class="nav-item dropdown">
+                            <a href="about.html" class="nav-link">关于我们 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="about.html#company-intro">企业简介</a></li>
+                                <li><a href="about.html#team">专家团队</a></li>
+                                <li><a href="about.html#qualifications">企业资质荣誉</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="services.html" class="nav-link">服务项目 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="services.html#huance">环策</a></li>
+                                <li><a href="services.html#huanxie">环协</a></li>
+                                <li><a href="services.html#huanze">环责</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="cases.html" class="nav-link active">技术合作 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="services.html#environmental-assessment">建设项目环境影响评价</a></li>
+                                <li><a href="services.html#completion-acceptance">建设项目竣工保护验收</a></li>
+                                <li><a href="services.html#pollution-permit">全国排污许可证</a></li>
+                                <li><a href="services.html#drainage-permit">排水许可证</a></li>
+                                <li><a href="services.html#radiation-permit">辐射安全许可证</a></li>
+                                <li><a href="services.html#medical-radiation">放射诊疗许可证</a></li>
+                                <li><a href="services.html#emergency-plan">突发环境事件应急预案</a></li>
+                                <li><a href="services.html#treatment-facilities">污染源治理设施建设</a></li>
+                                <li><a href="services.html#wastewater-operation">污水处理设施运营维护</a></li>
+                                <li><a href="services.html#wastewater-testing">废水检测</a></li>
+                                <li><a href="services.html#waste-gas-testing">废气检测</a></li>
+                                <li><a href="services.html#noise-testing">噪声检测</a></li>
+                                <li><a href="services.html#radiation-testing">辐射检测</a></li>
+                                <li><a href="services.html#hazardous-waste">危险废物处置</a></li>
+                                <li><a href="services.html#medical-waste">医疗废物处置</a></li>
+                                <li><a href="services.html#general-waste">一般固废处置</a></li>
+                                <li><a href="services.html#government-subsidy">政府补贴申报</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="news.html" class="nav-link">新闻中心 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="news.html#news-release">新闻发布</a></li>
+                                <li><a href="news.html#public-notice">公示公告</a></li>
+                                <li><a href="news.html#company-news">公司动态</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="jobs.html" class="nav-link">加入我们 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="jobs.html#job-positions">英雄帖</a></li>
+                                <li><a href="jobs.html#workspace">工作空间</a></li>
+                                <li><a href="jobs.html#failure-museum">失败博物馆</a></li>
+                                <li><a href="jobs.html#career-path">开启之路</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
                     </ul>
                 </nav>
@@ -41,7 +91,14 @@
         </div>
     </header>
 
-    <!-- 案例筛选器 -->
+    <!-- 页面横幅 -->
+    <section class="page-banner">
+        <div class="container">
+            <h1 class="banner-title">技术合作</h1>
+        </div>
+    </section>
+
+    <!-- 技术合作内容 -->
     <section class="case-filters">
         <div class="container">
             <div class="filter-container">
@@ -63,114 +120,114 @@
         </div>
     </section>
 
-    <!-- 案例列表 -->
-    <section class="cases-list">
+    <!-- 技术合作服务内容 -->
+    <section class="cooperation-services">
         <div class="container">
-            <div class="cases-grid">
-                <div class="case-item" data-category="chemical">
-                    <div class="case-image" style="background-image: url('images/case-chemical-1.jpg'); background-color: #ddd;">
-                        <div class="case-category">化工行业</div>
-                    </div>
-                    <div class="case-content">
-                        <h3 class="case-title">某大型化工企业废气治理项目</h3>
-                        <p class="case-client">客户：华东化工集团有限公司</p>
-                        <p class="case-description">
-                            该项目涉及有机废气治理，采用"预处理+RTO焚烧+急冷+碱洗"组合工艺，处理风量达到50000m³/h，有机物去除率达到99%以上，各项污染物排放指标均优于国家标准。
-                        </p>
-                        <div class="case-tags">
-                            <span class="case-tag">废气治理</span>
-                            <span class="case-tag">RTO技术</span>
-                            <span class="case-tag">达标排放</span>
+            <!-- 环评服务 -->
+            <div id="environmental-assessment" class="service-section">
+                <h2 class="service-title">建设项目环境影响评价</h2>
+                <div class="service-content">
+                    <p class="service-description">为建设项目提供专业的环境影响评价服务，确保项目符合环保要求。</p>
+                    <div class="service-features">
+                        <div class="feature-item">
+                            <h4>专业团队</h4>
+                            <p>拥有资深环评工程师团队</p>
+                        </div>
+                        <div class="feature-item">
+                            <h4>全程服务</h4>
+                            <p>从前期咨询到报告编制全程跟踪</p>
+                        </div>
+                        <div class="feature-item">
+                            <h4>高通过率</h4>
+                            <p>丰富经验确保高审批通过率</p>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="case-item" data-category="pharmaceutical">
-                    <div class="case-image" style="background-image: url('images/case-pharma-1.jpg'); background-color: #ddd;">
-                        <div class="case-category">医药行业</div>
-                    </div>
-                    <div class="case-content">
-                        <h3 class="case-title">医药产业园区环评报告编制</h3>
-                        <p class="case-client">客户：江苏生物医药产业园</p>
-                        <p class="case-description">
-                            承担园区总体规划环评和入园企业环评工作，涉及化学原料药、生物制药等多个领域，项目顺利通过专家评审，为园区后续发展奠定了坚实基础。
-                        </p>
-                        <div class="case-tags">
-                            <span class="case-tag">环评报告</span>
-                            <span class="case-tag">园区规划</span>
-                            <span class="case-tag">专家评审</span>
+            <!-- 竣工验收 -->
+            <div id="completion-acceptance" class="service-section">
+                <h2 class="service-title">建设项目竣工环境保护验收</h2>
+                <div class="service-content">
+                    <p class="service-description">为建设项目提供竣工环境保护验收服务，确保环保设施正常运行。</p>
+                    <div class="service-features">
+                        <div class="feature-item">
+                            <h4>现场检测</h4>
+                            <p>专业设备现场检测验收</p>
+                        </div>
+                        <div class="feature-item">
+                            <h4>报告编制</h4>
+                            <p>规范的验收报告编制</p>
+                        </div>
+                        <div class="feature-item">
+                            <h4>专家评审</h4>
+                            <p>组织专家评审验收</p>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="case-item" data-category="electroplating">
-                    <div class="case-image" style="background-image: url('images/case-electroplating-1.jpg'); background-color: #ddd;">
-                        <div class="case-category">电镀行业</div>
-                    </div>
-                    <div class="case-content">
-                        <h3 class="case-title">电镀企业污水处理系统升级改造</h3>
-                        <p class="case-client">客户：深圳精密电镀有限公司</p>
-                        <p class="case-description">
-                            针对电镀废水重金属超标问题，设计了"物化预处理+生化处理+深度处理+回用"的综合处理工艺，实现了废水的高效处理和70%回用率。
-                        </p>
-                        <div class="case-tags">
-                            <span class="case-tag">废水处理</span>
-                            <span class="case-tag">重金属去除</span>
-                            <span class="case-tag">中水回用</span>
+            <!-- 排污许可证 -->
+            <div id="pollution-permit" class="service-section">
+                <h2 class="service-title">全国排污许可证</h2>
+                <div class="service-content">
+                    <p class="service-description">协助企业申请和管理排污许可证，确保合规排放。</p>
+                    <div class="service-features">
+                        <div class="feature-item">
+                            <h4>申请代办</h4>
+                            <p>全程代办排污许可证申请</p>
+                        </div>
+                        <div class="feature-item">
+                            <h4>变更服务</h4>
+                            <p>许可证变更、延续服务</p>
+                        </div>
+                        <div class="feature-item">
+                            <h4>台账管理</h4>
+                            <p>排污许可台账管理指导</p>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="case-item" data-category="textile">
-                    <div class="case-image" style="background-image: url('images/case-textile-1.jpg'); background-color: #ddd;">
-                        <div class="case-category">纺织行业</div>
-                    </div>
-                    <div class="case-content">
-                        <h3 class="case-title">纺织印染企业清洁生产审核</h3>
-                        <p class="case-client">客户：浙江纺织印染集团</p>
-                        <p class="case-description">
-                            通过清洁生产审核，帮助企业识别节能减排潜力，实施了20余项清洁生产方案，年节约用水30万吨，减少COD排放200吨。
-                        </p>
-                        <div class="case-tags">
-                            <span class="case-tag">清洁生产</span>
-                            <span class="case-tag">节能减排</span>
-                            <span class="case-tag">成本节约</span>
+            <!-- 检测服务 -->
+            <div id="wastewater-testing" class="service-section">
+                <h2 class="service-title">环境检测服务</h2>
+                <div class="service-content">
+                    <p class="service-description">提供废水、废气、噪声、辐射等全方位环境检测服务。</p>
+                    <div class="service-grid">
+                        <div id="waste-gas-testing" class="service-item">
+                            <h4>废气检测</h4>
+                            <p>工业废气污染物检测</p>
+                        </div>
+                        <div id="noise-testing" class="service-item">
+                            <h4>噪声检测</h4>
+                            <p>环境噪声、厂界噪声检测</p>
+                        </div>
+                        <div id="radiation-testing" class="service-item">
+                            <h4>辐射检测</h4>
+                            <p>电磁辐射、放射性检测</p>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="case-item" data-category="chemical">
-                    <div class="case-image" style="background-image: url('images/case-chemical-2.jpg'); background-color: #ddd;">
-                        <div class="case-category">化工行业</div>
-                    </div>
-                    <div class="case-content">
-                        <h3 class="case-title">石化企业土壤修复工程</h3>
-                        <p class="case-client">客户：中石化某分公司</p>
-                        <p class="case-description">
-                            针对历史遗留的土壤污染问题，采用"异位热脱附+生物修复"技术，修复污染土壤5000立方米，土壤中石油烃含量降至安全标准以下。
-                        </p>
-                        <div class="case-tags">
-                            <span class="case-tag">土壤修复</span>
-                            <span class="case-tag">热脱附</span>
-                            <span class="case-tag">生物修复</span>
+            <!-- 废物处置 -->
+            <div id="hazardous-waste" class="service-section">
+                <h2 class="service-title">废物处置服务</h2>
+                <div class="service-content">
+                    <p class="service-description">提供危险废物、医疗废物、一般固废的规范化处置服务。</p>
+                    <div class="service-grid">
+                        <div id="medical-waste" class="service-item">
+                            <h4>医疗废物处置</h4>
+                            <p>医疗机构废物安全处置</p>
                         </div>
-                    </div>
-                </div>
-
-                <div class="case-item" data-category="pharmaceutical">
-                    <div class="case-image" style="background-image: url('images/case-pharma-2.jpg'); background-color: #ddd;">
-                        <div class="case-category">医药行业</div>
-                    </div>
-                    <div class="case-content">
-                        <h3 class="case-title">制药企业智慧环保平台建设</h3>
-                        <p class="case-client">客户：恒瑞医药股份有限公司</p>
-                        <p class="case-description">
-                            建设了集在线监测、数据分析、智能预警于一体的智慧环保管理平台，实现了环保设施运行状态的实时监控和智能化管理。
-                        </p>
-                        <div class="case-tags">
-                            <span class="case-tag">智慧环保</span>
-                            <span class="case-tag">在线监测</span>
-                            <span class="case-tag">智能预警</span>
+                        <div id="general-waste" class="service-item">
+                            <h4>一般固废处置</h4>
+                            <p>工业固废资源化利用</p>
+                        </div>
+                        <div id="government-subsidy" class="service-item">
+                            <h4>政府补贴申报</h4>
+                            <p>环保项目补贴申报服务</p>
                         </div>
                     </div>
                 </div>
@@ -194,38 +251,8 @@
     <!-- 页脚 -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-container">
-                <div class="footer-column">
-                    <h3 class="footer-title">快速链接</h3>
-                    <ul class="footer-links">
-                        <li><a href="index.html">首页</a></li>
-                        <li><a href="about.html">关于我们</a></li>
-                        <li><a href="services.html">服务项目</a></li>
-                        <li><a href="cases.html">成功案例</a></li>
-                        <li><a href="news.html">新闻中心</a></li>
-                        <li><a href="jobs.html">人才招聘</a></li>
-                        <li><a href="contact.html">联系我们</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3 class="footer-title">联系信息</h3>
-                    <ul class="footer-contact">
-                        <li><i>📍</i> 云南省昆明市西山区明波立交桥西侧宏盛达滇池柏悦1幢1001、1008</li>
-                        <li><i>📞</i> 0871-67174013</li>
-                        <li><i>✉️</i> 78520450@qq.com</li>
-                        <li><i>🕒</i> 周一至周五 8:30-17:50</li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3 class="footer-title">关注我们</h3>
-                    <div class="qrcode">
-                        <div style="width: 100px; height: 100px; background-color: #ddd; display: flex; align-items: center; justify-content: center; color: #666;">微信二维码</div>
-                    </div>
-                    <p style="text-align: center; margin-top: 10px;">扫码关注公众号</p>
-                </div>
-            </div>
             <div class="copyright">
-                <p>&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
+                <p style="color: white;">&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
             </div>
         </div>
     </footer>
