--- a/services.html
+++ b/services.html
@@ -27,11 +27,61 @@
                 <nav class="nav-menu">
                     <ul class="nav-list">
                         <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link">关于我们</a></li>
-                        <li class="nav-item"><a href="services.html" class="nav-link active">服务项目</a></li>
-                        <li class="nav-item"><a href="cases.html" class="nav-link">成功案例</a></li>
-                        <li class="nav-item"><a href="news.html" class="nav-link">新闻中心</a></li>
-                        <li class="nav-item"><a href="jobs.html" class="nav-link">人才招聘</a></li>
+                        <li class="nav-item dropdown">
+                            <a href="about.html" class="nav-link">关于我们 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="about.html#company-intro">企业简介</a></li>
+                                <li><a href="about.html#team">专家团队</a></li>
+                                <li><a href="about.html#qualifications">企业资质荣誉</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="services.html" class="nav-link">服务项目 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="services.html#huance">环策</a></li>
+                                <li><a href="services.html#huanxie">环协</a></li>
+                                <li><a href="services.html#huanze">环责</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="cases.html" class="nav-link">技术合作 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="services.html#environmental-assessment">建设项目环境影响评价</a></li>
+                                <li><a href="services.html#completion-acceptance">建设项目竣工保护验收</a></li>
+                                <li><a href="services.html#pollution-permit">全国排污许可证</a></li>
+                                <li><a href="services.html#drainage-permit">排水许可证</a></li>
+                                <li><a href="services.html#radiation-permit">辐射安全许可证</a></li>
+                                <li><a href="services.html#medical-radiation">放射诊疗许可证</a></li>
+                                <li><a href="services.html#emergency-plan">突发环境事件应急预案</a></li>
+                                <li><a href="services.html#treatment-facilities">污染源治理设施建设</a></li>
+                                <li><a href="services.html#wastewater-operation">污水处理设施运营维护</a></li>
+                                <li><a href="services.html#wastewater-testing">废水检测</a></li>
+                                <li><a href="services.html#waste-gas-testing">废气检测</a></li>
+                                <li><a href="services.html#noise-testing">噪声检测</a></li>
+                                <li><a href="services.html#radiation-testing">辐射检测</a></li>
+                                <li><a href="services.html#hazardous-waste">危险废物处置</a></li>
+                                <li><a href="services.html#medical-waste">医疗废物处置</a></li>
+                                <li><a href="services.html#general-waste">一般固废处置</a></li>
+                                <li><a href="services.html#government-subsidy">政府补贴申报</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="news.html" class="nav-link">新闻中心 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="news.html#news-release">新闻发布</a></li>
+                                <li><a href="news.html#public-notice">公示公告</a></li>
+                                <li><a href="news.html#company-news">公司动态</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="jobs.html" class="nav-link">加入我们 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="jobs.html#job-positions">英雄帖</a></li>
+                                <li><a href="jobs.html#workspace">工作空间</a></li>
+                                <li><a href="jobs.html#failure-museum">失败博物馆</a></li>
+                                <li><a href="jobs.html#career-path">开启之路</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
                     </ul>
                 </nav>
@@ -40,6 +90,13 @@
             </div>
         </div>
     </header>
+
+    <!-- 页面横幅 -->
+    <section class="page-banner">
+        <div class="container">
+            <h1 class="banner-title">服务项目</h1>
+        </div>
+    </section>
 
     <!-- 服务总览 -->
     <section class="section services-overview">
@@ -55,7 +112,7 @@
                 </div>
                 <div class="service-intro">
                     <p class="service-description">
-                        <strong>高阶专家智囊，为企业关键决策保驾护航</strong>
+                        高阶专家智囊，为企业关键决策保驾护航
                     </p>
                     <p class="service-description">
                         "环策"是一项被动响应式的高端专家咨询服务。它不介入企业的日常执行，而是在企业面临重大、复杂或突发性环保问题时，提供权威、精准的决策支持和解决方案，帮助企业在战略层面"做对选择，规避风险"。
@@ -104,7 +161,7 @@
                 </div>
                 <div class="service-intro">
                     <p class="service-description">
-                        <strong>主动介入式、SOP驱动的日常运营伙伴</strong>
+                        主动介入式、SOP驱动的日常运营伙伴
                     </p>
                     <p class="service-description">
                         "环协"是悦恩环保服务体系的基石，我们将承诺转化为行动，深度介入企业的日常环保管理，成为企业最可靠的"执行官"。我们的服务严格遵循从"精准诊断"到"定制计划"再到"协同执行"的SOP闭环管理流程，确保服务全程专业、规范、高效。
@@ -207,7 +264,7 @@
                 </div>
                 <div class="service-intro">
                     <p class="service-description">
-                        <strong>战略性、全权托管式的终极解决方案</strong>
+                        战略性、全权托管式的终极解决方案
                     </p>
                     <p class="service-description">
                         "环责"是我们为核心战略客户规划的顶级服务模式。在此模式下，企业将环保管理职能（在合同约定范围内）完全托管给悦恩环保，实现真正的"零操心"。我们将拥有更高的管理权限，同时也将承担最全面的环保责任。在此模式下，悦恩环保将全面承担合同范围内因环保问题所导致的一切直接经济损失，无论企业是否参与。
@@ -300,38 +357,8 @@
     <!-- 页脚 -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-container">
-                <div class="footer-column">
-                    <h3 class="footer-title">快速链接</h3>
-                    <ul class="footer-links">
-                        <li><a href="index.html">首页</a></li>
-                        <li><a href="about.html">关于我们</a></li>
-                        <li><a href="services.html">服务项目</a></li>
-                        <li><a href="cases.html">成功案例</a></li>
-                        <li><a href="news.html">新闻中心</a></li>
-                        <li><a href="jobs.html">人才招聘</a></li>
-                        <li><a href="contact.html">联系我们</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3 class="footer-title">联系信息</h3>
-                    <ul class="footer-contact">
-                        <li><i>📍</i> 云南省昆明市西山区明波立交桥西侧宏盛达滇池柏悦1幢1001、1008</li>
-                        <li><i>📞</i> 0871-67174013</li>
-                        <li><i>✉️</i> 78520450@qq.com</li>
-                        <li><i>🕒</i> 周一至周五 8:30-17:50</li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h3 class="footer-title">关注我们</h3>
-                    <div class="qrcode">
-                        <div style="width: 100px; height: 100px; background-color: #ddd; display: flex; align-items: center; justify-content: center; color: #666;">微信二维码</div>
-                    </div>
-                    <p style="text-align: center; margin-top: 10px;">扫码关注公众号</p>
-                </div>
-            </div>
             <div class="copyright">
-                <p>&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
+                <p style="color: white;">&copy; 2025 云南悦恩环保技术咨询有限公司 (Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd). All Rights Reserved.</p>
             </div>
         </div>
     </footer>
