修复技术合作页面：1.更新页头底图路径为技术合作.png 2.修复政府补贴锚点链接不匹配问题

--- a/cases.html
+++ b/cases.html
@@ -60,7 +60,7 @@
                                 <li><a href="#hazardous-waste">危险废物处置</a></li>
                                 <li><a href="#medical-waste">医疗废物处置</a></li>
                                 <li><a href="#general-waste">一般固废处理</a></li>
-                                <li><a href="#government-subsidy">政府环保相关补贴申报</a></li>
+                                <li><a href="#government-subsidies">政府环保相关补贴申报</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
