feat: 优化核心人员详细简介功能
- 移除照片悬停蒙版效果，改为卡片底部按钮设计
- 添加专业的'查看详细简介'按钮，提升用户体验
- 实现核心人员个人简介模态框功能
- 集成完整的个人简介内容（姚晓、王绎潞、周政）
- 优化团队风采和工作风采为相册形式，避免页面内容堆叠
- 完善CSS样式和JavaScript交互功能
- 支持键盘导航和背景点击关闭模态框

--- a/cases.html
+++ b/cases.html
@@ -31,8 +31,10 @@
                             <a href="about.html" class="nav-link">关于我们 <span class="dropdown-arrow">▼</span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="about.html#company-intro">企业简介</a></li>
-                                <li><a href="about.html#team">专家团队</a></li>
-                                <li><a href="about.html#qualifications">企业资质荣誉</a></li>
+                                <li><a href="about.html#core-team">核心人员</a></li>
+                                <li><a href="about.html#team-culture">团队风采</a></li>
+                                <li><a href="about.html#work-showcase">工作风采</a></li>
+                                <li><a href="about.html#qualifications">企业资质</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -72,7 +74,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a href="jobs.html" class="nav-link">加入我们 <span class="dropdown-arrow">▼</span></a>
+                            <a href="jobs.html" class="nav-link">职等你来 <span class="dropdown-arrow">▼</span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="jobs.html#job-positions">英雄帖</a></li>
                                 <li><a href="jobs.html#workspace">工作空间</a></li>
