实现全局搜索按钮功能：为首页添加homepage类，在非首页导航栏添加搜索图标，引入Font Awesome图标库

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>联系我们 - 云南悦恩环保技术咨询有限公司</title>
     <meta name="description" content="联系云南悦恩环保技术咨询有限公司，获取专业的环保服务咨询和报价">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contact.css">
 </head>
@@ -28,6 +29,11 @@
             <div class="container">
                 <nav class="nav-menu">
                     <ul class="nav-list">
+                        <li class="nav-item">
+                            <a href="#" class="search-icon-global nav-link">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </li>
                         <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
                         <li class="nav-item dropdown">
                             <a href="about.html" class="nav-link">关于我们 <span class="dropdown-arrow">▼</span></a>
