--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <title>云南悦恩环保技术咨询有限公司 - 您值得信赖的全周期环保管家</title>
     <meta name="description" content="云南悦恩环保技术咨询有限公司提供专业的环保咨询、污染治理、环境检测、排污许可申报等一站式环保服务">
     <meta name="keywords" content="环保服务,环境治理,污染治理,环保咨询,排污许可,环境检测">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
-<body>
+<body class="homepage">
     <!-- 页头 -->
     <header class="header">
         <div class="container">
             <div class="header-container">
+                <!-- 🚨 新的搜索按钮放在这里 -->
+                <a href="#" class="search-icon-global">
+                    <i class="fas fa-search"></i>
+                </a>
                 <div class="logo">
                     <a href="index.html">
                         <img src="logo.png" alt="云南悦恩环保技术咨询有限公司" class="logo-img">
