--- a/jobs.html
+++ b/jobs.html
@@ -6,6 +6,7 @@
     <title>职等你来 - 云南悦恩环保技术咨询有限公司</title>
     <meta name="description" content="云南悦恩环保技术咨询有限公司提供专业的环保咨询、污染治理、环境检测、排污许可申报等一站式环保服务">
     <meta name="keywords" content="环保服务,环境治理,污染治理,环保咨询,排污许可,环境检测,职等你来,招聘信息">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/jobs.css">
 </head>
@@ -27,6 +28,11 @@
             <div class="container">
                 <nav class="nav-menu">
                     <ul class="nav-list">
+                        <li class="nav-item">
+                            <a href="#" class="search-icon-global nav-link">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </li>
                         <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
                         <li class="nav-item dropdown">
                             <a href="about.html" class="nav-link">关于我们 <span class="dropdown-arrow">▼</span></a>
