--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于我们 - 云南悦恩环保技术咨询有限公司</title>
     <meta name="description" content="了解云南悦恩环保技术咨询有限公司的发展历程、专业团队和企业资质，我们致力于为客户提供专业的环保服务">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/image-viewer.css">
@@ -27,6 +28,11 @@
             <div class="container">
                 <nav class="nav-menu">
                     <ul class="nav-list">
+                        <li class="nav-item">
+                            <a href="#" class="search-icon-global nav-link">
+                                <i class="fas fa-search"></i>
+                            </a>
+                        </li>
                         <li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
                         <li class="nav-item dropdown">
                             <a href="about.html" class="nav-link">关于我们 <span class="dropdown-arrow">▼</span></a>
