实现全局搜索功能：创建搜索数据库、设计搜索界面，支持实时搜索、关键词高亮、分类显示等功能

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/search.css">
 </head>
 <body class="homepage">
     <!-- 页头 -->
@@ -161,5 +162,6 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/search.js"></script>
 </body>
 </html>
