--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/image-viewer.css">
+    <link rel="stylesheet" href="css/search.css">
 </head>
 <body>
     <!-- 页头 -->
@@ -630,6 +631,7 @@
     </div>
 
     <script src="js/main.js"></script>
+    <script src="js/search.js"></script>
     <script src="js/image-viewer.js"></script>
 </body>
 </html>
