--- a/jobs.html
+++ b/jobs.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/jobs.css">
+    <link rel="stylesheet" href="css/search.css">
 </head>
 <body>
     <!-- 页头 -->
@@ -789,5 +790,6 @@
     </div>
 
     <script src="js/main.js"></script>
+    <script src="js/search.js"></script>
 </body>
 </html>
