--- a/news.html
+++ b/news.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/news.css">
+    <link rel="stylesheet" href="css/search.css">
 </head>
 <body>
     <!-- 页头 -->
@@ -277,5 +278,6 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/search.js"></script>
 </body>
 </html>
