完成招聘页面优化：1.为英雄帖板块添加职位图标；2.统一标题字体样式；3.修改联系方式信息；4.优化数据信息处理专员图标

--- a/jobs.html
+++ b/jobs.html
@@ -7,6 +7,7 @@
     <meta name="description" content="云南悦恩环保技术咨询有限公司提供专业的环保咨询、污染治理、环境检测、排污许可申报等一站式环保服务">
     <meta name="keywords" content="环保服务,环境治理,污染治理,环保咨询,排污许可,环境检测,职等你来,招聘信息">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/jobs.css">
     <link rel="stylesheet" href="css/search.css">
@@ -168,6 +169,7 @@
                 <div class="job-cards-grid">
                     <div class="job-card-compact" data-job="sales-field">
                         <div class="job-card-content">
+                            <i class="ri-speak-line job-card-icon"></i>
                             <h3 class="job-card-title">销售外勤</h3>
                             <span class="job-card-action">查看岗位</span>
                         </div>
@@ -175,6 +177,7 @@
 
                     <div class="job-card-compact" data-job="sales-office">
                         <div class="job-card-content">
+                            <i class="ri-macbook-line job-card-icon"></i>
                             <h3 class="job-card-title">销售内勤</h3>
                             <span class="job-card-action">查看岗位</span>
                         </div>
@@ -182,6 +185,7 @@
 
                     <div class="job-card-compact" data-job="tech-field">
                         <div class="job-card-content">
+                            <i class="ri-team-line job-card-icon"></i>
                             <h3 class="job-card-title">技术现场</h3>
                             <span class="job-card-action">查看岗位</span>
                         </div>
@@ -189,6 +193,7 @@
 
                     <div class="job-card-compact" data-job="tech-document">
                         <div class="job-card-content">
+                            <i class="ri-file-text-line job-card-icon"></i>
                             <h3 class="job-card-title">技术文案</h3>
                             <span class="job-card-action">查看岗位</span>
                         </div>
@@ -196,6 +201,7 @@
 
                     <div class="job-card-compact" data-job="wastewater-engineer">
                         <div class="job-card-content">
+                            <i class="ri-tools-fill job-card-icon"></i>
                             <h3 class="job-card-title">污水处理站运维工程师</h3>
                             <span class="job-card-action">查看岗位</span>
                         </div>
@@ -203,6 +209,7 @@
 
                     <div class="job-card-compact" data-job="admin-clerk">
                         <div class="job-card-content">
+                            <i class="ri-code-s-slash-line job-card-icon"></i>
                             <h3 class="job-card-title">行政文员</h3>
                             <span class="job-card-action">查看岗位</span>
                         </div>
@@ -210,6 +217,7 @@
 
                     <div class="job-card-compact" data-job="data-specialist">
                         <div class="job-card-content">
+                            <i class="ri-function-line job-card-icon"></i>
                             <h3 class="job-card-title">数据信息处理专员</h3>
                             <span class="job-card-action">查看岗位</span>
                         </div>
