更新新闻中心页面：调整板块顺序，修改标题样式，更新导航菜单

--- a/news.html
+++ b/news.html
@@ -79,9 +79,9 @@
                         <li class="nav-item dropdown">
                             <a href="news.html" class="nav-link active">新闻中心 <span class="dropdown-arrow">▼</span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="news.html#news-release">新闻发布</a></li>
+                                <li><a href="news.html#yueen-vision">悦恩视界</a></li>
+                                <li><a href="news.html#yueen-footprint">悦恩足迹</a></li>
                                 <li><a href="news.html#public-notice">公示公告</a></li>
-                                <li><a href="news.html#company-news">公司动态</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -112,19 +112,19 @@
     <!-- 新闻内容 -->
     <section class="news-content">
         <div class="container">
-            <!-- 新闻发布 -->
-            <div id="news-release" class="news-section">
-                <h2 class="news-section-title">新闻发布</h2>
+            <!-- 悦恩视界 -->
+            <div id="yueen-vision" class="news-section">
+                <h2 class="news-section-title">悦恩视界</h2>
                 <div class="news-grid">
                     <article class="news-card">
                         <div class="news-image" style="background-color: #ddd;">
                             <div class="news-date-badge">2024-12-15</div>
                         </div>
                         <div class="news-content-inner">
-                            <div class="news-category">政策解读</div>
-                            <h3 class="news-title">新版《建设项目环境影响评价分类管理名录》正式实施</h3>
+                            <div class="news-category">行业洞察</div>
+                            <h3 class="news-title">环保产业数字化转型趋势分析</h3>
                             <p class="news-excerpt">
-                                生态环境部发布的新版分类管理名录将于2024年1月1日起正式实施，对建设项目环评管理提出了新的要求。新名录进一步优化了项目分类，简化了审批流程，提高了环评效率...
+                                随着人工智能、大数据、物联网等技术的快速发展，环保产业正迎来数字化转型的关键时期。本文深入分析了当前环保产业数字化转型的主要趋势、技术路径和应用前景...
                             </p>
                             <div class="news-meta">
                                 <span>发布时间：2024-12-15</span>
@@ -138,10 +138,10 @@
                             <div class="news-date-badge">2024-11-28</div>
                         </div>
                         <div class="news-content-inner">
-                            <div class="news-category">行业动态</div>
-                            <h3 class="news-title">碳达峰碳中和目标下的环保产业发展机遇</h3>
+                            <div class="news-category">政策解读</div>
+                            <h3 class="news-title">新环保法实施对企业的影响与应对策略</h3>
                             <p class="news-excerpt">
-                                随着国家"双碳"目标的提出，环保产业迎来了前所未有的发展机遇。从政策支持到市场需求，从技术创新到商业模式，环保产业正在经历深刻的变革...
+                                新修订的《环境保护法》进一步强化了企业的环保责任，明确了违法成本。本文从企业角度出发，分析新法规的主要变化及其对企业经营的影响，并提出相应的应对策略...
                             </p>
                             <div class="news-meta">
                                 <span>发布时间：2024-11-28</span>
@@ -155,13 +155,70 @@
                             <div class="news-date-badge">2024-11-20</div>
                         </div>
                         <div class="news-content-inner">
-                            <div class="news-category">技术分享</div>
-                            <h3 class="news-title">VOCs治理技术发展趋势及应用案例分析</h3>
+                            <div class="news-category">技术前沿</div>
+                            <h3 class="news-title">碳捕集与封存技术发展现状及应用前景</h3>
                             <p class="news-excerpt">
-                                挥发性有机化合物(VOCs)治理是当前大气污染防治的重点领域。本文分析了当前主流的VOCs治理技术，包括吸附、燃烧、生物处理等，并结合实际案例探讨技术选择...
+                                碳捕集、利用与封存(CCUS)技术作为实现碳中和目标的关键技术之一，近年来受到广泛关注。本文综述了CCUS技术的发展现状、主要技术路线和国内外应用案例...
                             </p>
                             <div class="news-meta">
                                 <span>发布时间：2024-11-20</span>
+                                <a href="#" class="read-more">阅读全文</a>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+
+            <!-- 悦恩足迹 -->
+            <div id="yueen-footprint" class="news-section">
+                <h2 class="news-section-title">悦恩足迹</h2>
+                <div class="news-grid">
+                    <article class="news-card">
+                        <div class="news-image" style="background-color: #ddd;">
+                            <div class="news-date-badge">2024-12-10</div>
+                        </div>
+                        <div class="news-content-inner">
+                            <div class="news-category">企业动态</div>
+                            <h3 class="news-title">云南悦恩环保荣获"绿色发展先锋企业"称号</h3>
+                            <p class="news-excerpt">
+                                在由中国环保产业协会主办的年度评选中，云南悦恩环保凭借在绿色技术创新和服务模式创新方面的突出表现，荣获"绿色发展先锋企业"称号，这是对我们坚持绿色发展理念的充分肯定...
+                            </p>
+                            <div class="news-meta">
+                                <span>发布时间：2024-12-10</span>
+                                <a href="#" class="read-more">阅读全文</a>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="news-card">
+                        <div class="news-image" style="background-color: #ddd;">
+                            <div class="news-date-badge">2024-12-05</div>
+                        </div>
+                        <div class="news-content-inner">
+                            <div class="news-category">项目进展</div>
+                            <h3 class="news-title">智慧环保云平台成功上线运行</h3>
+                            <p class="news-excerpt">
+                                经过8个月的研发和测试，由我公司自主研发的智慧环保云平台正式上线运行。该平台集成了环境监测、数据分析、预警预报等功能，为客户提供一站式环保管理解决方案...
+                            </p>
+                            <div class="news-meta">
+                                <span>发布时间：2024-12-05</span>
+                                <a href="#" class="read-more">阅读全文</a>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="news-card">
+                        <div class="news-image" style="background-color: #ddd;">
+                            <div class="news-date-badge">2024-11-15</div>
+                        </div>
+                        <div class="news-content-inner">
+                            <div class="news-category">社会责任</div>
+                            <h3 class="news-title">悦恩环保参与"绿色校园"公益项目</h3>
+                            <p class="news-excerpt">
+                                我公司积极参与由省教育厅发起的"绿色校园"公益项目，为省内10所中小学提供环保知识讲座和校园环境改善方案，助力培养青少年的环保意识...
+                            </p>
+                            <div class="news-meta">
+                                <span>发布时间：2024-11-15</span>
                                 <a href="#" class="read-more">阅读全文</a>
                             </div>
                         </div>
@@ -208,63 +265,6 @@
                             <a href="#" class="notice-link">查看详情</a>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <!-- 公司动态 -->
-            <div id="company-news" class="news-section">
-                <h2 class="news-section-title">公司动态</h2>
-                <div class="news-grid">
-                    <article class="news-card">
-                        <div class="news-image" style="background-color: #ddd;">
-                            <div class="news-date-badge">2024-12-10</div>
-                        </div>
-                        <div class="news-content-inner">
-                            <div class="news-category">公司新闻</div>
-                            <h3 class="news-title">云南悦恩环保荣获"2023年度优秀环保服务机构"称号</h3>
-                            <p class="news-excerpt">
-                                在刚刚结束的环保行业年度评选中，云南悦恩环保凭借优质的服务和良好的口碑，荣获"2023年度优秀环保服务机构"称号。这是对我们专业能力和服务质量的充分认可...
-                            </p>
-                            <div class="news-meta">
-                                <span>发布时间：2024-12-10</span>
-                                <a href="#" class="read-more">阅读全文</a>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article class="news-card">
-                        <div class="news-image" style="background-color: #ddd;">
-                            <div class="news-date-badge">2024-12-05</div>
-                        </div>
-                        <div class="news-content-inner">
-                            <div class="news-category">产品动态</div>
-                            <h3 class="news-title">智慧环保平台2.0版本正式上线</h3>
-                            <p class="news-excerpt">
-                                经过半年的研发和测试，我们的智慧环保平台2.0版本正式上线。新版本新增了AI智能预警、数据可视化、移动端应用等功能，为客户提供更加便捷高效的环保管理体验...
-                            </p>
-                            <div class="news-meta">
-                                <span>发布时间：2024-12-05</span>
-                                <a href="#" class="read-more">阅读全文</a>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article class="news-card">
-                        <div class="news-image" style="background-color: #ddd;">
-                            <div class="news-date-badge">2024-11-15</div>
-                        </div>
-                        <div class="news-content-inner">
-                            <div class="news-category">合作动态</div>
-                            <h3 class="news-title">云南悦恩环保与清华大学环境学院签署战略合作协议</h3>
-                            <p class="news-excerpt">
-                                近日，云南悦恩环保与清华大学环境学院正式签署战略合作协议，双方将在环保技术研发、人才培养、项目合作等方面开展深度合作，共同推动环保产业的技术创新和发展...
-                            </p>
-                            <div class="news-meta">
-                                <span>发布时间：2024-11-15</span>
-                                <a href="#" class="read-more">阅读全文</a>
-                            </div>
-                        </div>
-                    </article>
                 </div>
             </div>
         </div>
