完成网站多页面样式优化：1. 统一标题字体样式，去除加粗改为纤细字体与开启之路保持一致 2. 优化企业资质板块图标显示 3. 修复开启之路板块邮箱链接点击问题 4. 完善团队风采板块图标样式

--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/image-viewer.css">
     <link rel="stylesheet" href="css/search.css">
+    <!-- Remixicon 图标库 -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body class="about-page">
     <!-- 页头 -->
@@ -201,7 +203,7 @@
                     <div class="moment-cover">
                         <img src="团队风采png/77bbb7cc8f6fe4baf07e3dec0a9bc9a9.jpg" alt="团队活动精彩瞬间">
                         <div class="moment-overlay">
-                            <i class="fas fa-search-plus"></i>
+                            <i class="ri-zoom-in-line"></i>
                         </div>
                     </div>
                     <div class="moment-content">
@@ -219,7 +221,7 @@
                     <div class="moment-cover">
                         <img src="工作风采png/0298a5e59bcbf8d545e628b17c08e944.jpg" alt="工作风采瞬间">
                         <div class="moment-overlay">
-                            <i class="fas fa-search-plus"></i>
+                            <i class="ri-zoom-in-line"></i>
                         </div>
                     </div>
                     <div class="moment-content">
