完成首页视觉效果优化：1. 为轮播标题设置纤细字体样式；2. 调整轮播文字位置使其更居中；3. 添加发光粒子和电流背景效果；4. 添加3D地球动画效果

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="css/search.css">
+    <!-- 粒子效果样式 -->
+    <link rel="stylesheet" href="css/particles.css">
 </head>
 <body class="homepage">
     <!-- 页头 -->
@@ -163,5 +165,7 @@
 
     <script src="js/main.js"></script>
     <script src="js/search.js"></script>
+    <!-- 粒子效果脚本 -->
+    <script src="js/particles.js"></script>
 </body>
 </html>
